--- a/templates/test.html
+++ b/templates/test.html
@@ -3,15 +3,17 @@
 
   <head>
    <title>
-    Hello
+    Test
    </title>
  </head>
 
 
 <body> 
     <h1>This is the body header</h1>
-    <p>This is Paragraph one </p>
-    <p>This is Paragraph two</p>
+    <p>This is Paragraph</p>
+
 </body>
+
+
 
 </html>
